chore(spindle-tokens): install @figma/rest-api-spec

--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@figma-export/cli": "^4.0.0",
     "@figma-export/types": "^4.0.0",
+    "@figma/rest-api-spec": "^0.17.0",
     "@types/jest": "^29.5.13",
     "@types/lodash.setwith": "^4.3.6",
     "jest": "^29.0.0",
