chore(spindle-tokens): update npm scripts

--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -21,12 +21,11 @@
     "test": "tsc --noEmit && yarn jest",
     "stylelint": "stylelint dist/**/*.css",
     "jest": "jest",
-    "build": "run-p build:*",
-    "build:tokens": "style-dictionary build",
-    "build:css": "style-dictionary build --config ./config-css.js",
-    "postbuild:css": "yarn stylelint",
-    "preexport": "tsc",
-    "export": "./node_modules/.bin/figma-export use-config",
+    "build": "style-dictionary build --verbose",
+    "postbuild": "yarn stylelint",
+    "export": "run-p export:*",
+    "export:animation": "tsx scripts/animation.ts",
+    "export:color": "tsx scripts/color.ts",
     "cp": "npx cpx dist/css/spindle-tokens.css ./",
     "prepublishOnly": "yarn build && yarn cp"
   },
