chore: replace bundlesize with size-limit

--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -10,13 +10,13 @@
   ],
   "scripts": {
     "generate": "scaffdog generate",
-    "test": "run-p bundlesize lint test:interaction",
+    "test": "run-p size lint test:interaction",
     "lint": "yarn lint:style",
     "lint:style": "stylelint '**/*.css'",
     "fix": "yarn lint:style --fix",
     "test:interaction": "jest",
-    "prebundlesize": "yarn build",
-    "bundlesize": "npx bundlesize",
+    "presize": "yarn build",
+    "size": "size-limit",
     "dev": "yarn storybook:start",
     "storybook:start": "start-storybook -p 6006 -c .storybook",
     "storybook:build": "build-storybook -o public -c .storybook",
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@mdx-js/react": "^1.6.22",
+    "@size-limit/file": "^11.1.5",
     "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-backgrounds": "^6.5.9",
@@ -96,6 +97,7 @@
     "reg-publish-gcs-plugin": "^0.14.0",
     "reg-suit": "^0.14.0",
     "scaffdog": "^4.0.0",
+    "size-limit": "^11.1.5",
     "stylelint": "^15.0.0",
     "stylelint-config-prettier": "^9.0.0",
     "stylelint-config-standard": "^34.0.0",
