--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -5,14 +5,15 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "run-p bundlesize test:interaction",
+    "test": "run-p size test:interaction",
     "test:interaction": "jest --passWithNoTests",
     "dev": "yarn storybook:start",
     "storybook:start": "start-storybook -p 6006 -c .storybook",
     "storybook:build": "build-storybook -o public -c .storybook",
     "storybook:deploy": "firebase deploy --only hosting",
     "serve": "firebase serve",
-    "prebundlesize": "yarn build",
+    "presize": "yarn build",
+    "size": "bundlewatch --config .bundlewatch.config.js",
     "bundlesize": "npx bundlesize",
     "clean": "npx rimraf dist",
     "prebuild": "yarn clean",
@@ -55,6 +56,7 @@
     "@types/jest": "^27.0.0",
     "@types/react": "^18.0.14",
     "bundlesize": "^0.18.0",
+    "bundlewatch": "^0.4.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
     "react": "^18.2.0",
