--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -10,12 +10,13 @@
   ],
   "scripts": {
     "generate": "scaffdog generate",
-    "test": "run-p bundlesize lint test:interaction",
+    "test": "run-p size lint test:interaction",
     "lint": "yarn lint:style",
     "lint:style": "stylelint '**/*.css'",
     "fix": "yarn lint:style --fix",
     "test:interaction": "jest",
-    "prebundlesize": "yarn build",
+    "presize": "yarn build",
+    "size": "bundlewatch --config .bundlewatch.config.js",
     "bundlesize": "npx bundlesize",
     "dev": "yarn storybook:start",
     "storybook:start": "start-storybook -p 6006 -c .storybook",
@@ -81,6 +82,7 @@
     "autoprefixer": "^10.0.0",
     "babel-loader": "^9.0.0",
     "bundlesize": "^0.18.0",
+    "bundlewatch": "^0.4.0",
     "cssnano": "^7.0.0",
     "dialog-polyfill": "^0.5.6",
     "firebase-tools": "^13.0.0",
