--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -14,7 +14,7 @@
     "lint": "yarn lint:style",
     "lint:style": "stylelint '**/*.css'",
     "fix": "yarn lint:style --fix",
-    "test:interaction": "jest",
+    "test:interaction": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest",
     "presize": "yarn build",
     "size": "bundlewatch --config .bundlewatch.config.js",
     "dev": "yarn storybook:start",
