--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "spindle",
   "private": true,
   "scripts": {
-    "test": "run-p lint format test:packages",
+    "test": "run-p lint format test:*",
     "test:packages": "lerna run test",
+    "test:bin": "jest bin",
     "lint": "run-p lint:*",
     "lint:script": "eslint --cache 'packages/**/src/**/*.{js,ts,tsx}'",
     "lint:yaml": "yamllint .github/workflows/*.yml",
@@ -18,7 +19,7 @@
     "bootstrap": "lerna bootstrap",
     "build": "run-s build:*",
     "build:package": "lerna run build",
-    "build:extensionReplace": "npx tsx bin/outputExtensionReplace.ts",
+    "build:extensionReplace": "node bin/outputExtensionReplace.js",
     "prepare": "is-ci || husky install"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "glob-promise": "^6.0.7",
     "husky": "^9.1.5",
     "is-ci": "^3.0.0",
+    "jest": "^29.7.0",
     "lerna": "^8.0.0",
     "npm-run-all2": "^6.0.0",
     "prettier": "3.3.3",
