--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "bootstrap": "lerna bootstrap",
     "build": "run-s build:*",
     "build:package": "lerna run build",
-    "build:extensionReplace": "node bin/outputExtensionReplace.js",
+    "build:extensionReplace": "find packages/*/dist -iname '*.mjs' -type f -print | xargs jscodeshift -t ./bin/outputExtensionReplace.js",
     "prepare": "is-ci || husky install"
   },
   "devDependencies": {
@@ -32,10 +32,10 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "7.37.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "glob-promise": "^6.0.7",
     "husky": "^9.1.5",
     "is-ci": "^3.0.0",
     "jest": "^29.7.0",
+    "jscodeshift": "^17.1.1",
     "lerna": "^8.0.0",
     "npm-run-all2": "^6.0.0",
     "prettier": "3.3.3",
