--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "spindle",
   "private": true,
   "scripts": {
-    "test": "run-p lint format test:packages",
+    "test": "run-p lint format test:*",
     "test:packages": "lerna run test",
+    "test:bin": "jest bin",
     "lint": "run-p lint:*",
     "lint:script": "eslint --cache 'packages/**/src/**/*.{js,ts,tsx}'",
     "lint:yaml": "yamllint .github/workflows/*.yml",
@@ -16,7 +17,9 @@
     "fix:format": "prettier --write '**/*.{js,ts,tsx}'",
     "fix:text": "textlint --fix .",
     "bootstrap": "lerna bootstrap",
-    "build": "lerna run build",
+    "build": "run-s build:*",
+    "build:package": "lerna run build",
+    "build:extensionReplace": "jscodeshift -t ./bin/outputExtensionReplace.js packages/*/dist/** --extensions=mjs",
     "prepare": "is-ci || husky install"
   },
   "devDependencies": {
@@ -31,6 +34,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.1.5",
     "is-ci": "^3.0.0",
+    "jest": "^29.7.0",
+    "jscodeshift": "^17.1.1",
     "lerna": "^8.0.0",
     "npm-run-all2": "^6.0.0",
     "prettier": "3.3.3",
