build(spindle-theme-switch): moduleResolutionの設定値をnode16に変更

--- a/packages/spindle-theme-switch/tsconfig.json
+++ b/packages/spindle-theme-switch/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "outDir": "dist",
-    "moduleResolution": "node"
+    "moduleResolution": "node16"
   },
   "include": [
     "src"
