chore(spindle-hooks): spindle-hooksのdist/をpackageに含める

--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -24,6 +24,9 @@
     "prepublishOnly": "yarn build"
   },
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/openameba/spindle.git"
