--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -35,8 +35,8 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@types/react": "^16.8.6 || ^17.0.0 || ^18.0.0",
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "@types/react": "^16.8.6 || ^17.0.0 || ^18.0.0|| ^19.0.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0|| ^19.0.0"
   },
   "peerDependenciesMeta": {
     "@types/react": {
