chore: test時にPUPPETEER_EXECUTABLE_PATHを設定

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,6 @@ jobs:
       - run: |
           yarn lerna run --scope @openameba/spindle-hooks build
           yarn test
+        env:
+          PUPPETEER_EXECUTABLE_PATH: /usr/bin/google-chrome-stable
+
