--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -18,9 +18,10 @@
     "prebuild": "yarn clean",
     "build": "run-s build:esm build:cjs",
     "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "run-s build:esm:js build:esm:rename",
+    "build:esm": "run-s build:esm:*",
     "build:esm:js": "tsc -p tsconfig.esm.json",
     "build:esm:rename": "npx renamer --find js --replace mjs 'dist/**'",
+    "build:esm:extensionReplace": "jscodeshift -t ../../bin/outputExtensionReplace.js dist/** --extensions=mjs",
     "prepublishOnly": "yarn build"
   },
   "license": "MIT",
