--- a/packages/spindle-mcp-server/package.json
+++ b/packages/spindle-mcp-server/package.json
@@ -12,6 +12,7 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage"
   },
+  "private": true,
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.3.1",
     "zod": "^3.22.4"
