chore(spindle-hooks): storybookのバージョンを8系に更新し、その過程で必要になった変更を加えた。

--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -8,8 +8,8 @@
     "test": "run-p size test:interaction",
     "test:interaction": "jest --passWithNoTests",
     "dev": "yarn storybook:start",
-    "storybook:start": "start-storybook -p 6006 -c .storybook",
-    "storybook:build": "build-storybook -o public -c .storybook",
+    "storybook:start": "storybook dev -p 6006 -c .storybook",
+    "storybook:build": "storybook build -o public -c .storybook",
     "storybook:deploy": "firebase deploy --only hosting",
     "serve": "firebase serve",
     "presize": "yarn build",
@@ -45,14 +45,15 @@
     }
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "6.5.9",
-    "@storybook/addon-actions": "6.5.16",
-    "@storybook/addon-backgrounds": "6.5.16",
-    "@storybook/addon-docs": "6.5.16",
-    "@storybook/addon-viewport": "6.5.16",
-    "@storybook/builder-webpack5": "6.5.16",
-    "@storybook/manager-webpack5": "6.5.16",
-    "@storybook/react": "6.5.16",
+    "@storybook/addon-a11y": "8.6.14",
+    "@storybook/addon-actions": "8.6.14",
+    "@storybook/addon-backgrounds": "8.6.14",
+    "@storybook/addon-docs": "8.6.14",
+    "@storybook/addon-viewport": "8.6.14",
+    "@storybook/addon-webpack5-compiler-swc": "3.0.0",
+    "@storybook/react": "8.6.14",
+    "@storybook/react-webpack5": "8.6.14",
+    "storybook": "8.6.14",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.5.2",
