build(spindle-ui,spindle-tokens,spindle-mcp-server,spindle-hooks): excludesにまとめて指定されてたものをbuild設定と分けた

--- a/packages/spindle-hooks/tsconfig.esm.json
+++ b/packages/spindle-hooks/tsconfig.esm.json
@@ -4,5 +4,9 @@
     "target": "ESNext",
     "outDir": "dist",
     "moduleResolution": "node"
-  }
+  },
+  "exclude": [
+    "src/**/*.test.*",
+    "src/**/*.stories.*",
+  ]
 }
