--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -53,17 +53,19 @@
     "@storybook/addon-webpack5-compiler-swc": "3.0.0",
     "@storybook/react": "8.6.14",
     "@storybook/react-webpack5": "8.6.14",
-    "storybook": "8.6.14",
+    "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.5.0",
-    "@testing-library/react": "13.3.0",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "14.5.2",
     "@types/jest": "29.5.13",
     "@types/react": "18.3.9",
+    "@types/react-dom": "19.1.6",
     "bundlewatch": "0.4.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "storybook": "8.6.14",
     "ts-jest": "29.3.2",
     "webpack": "5.94.0"
   }
