--- a/packages/spindle-hooks/tsconfig.cjs.json
+++ b/packages/spindle-hooks/tsconfig.cjs.json
@@ -6,5 +6,9 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true
-  }
+  },
+  "exclude": [
+    "src/**/*.test.*",
+    "src/**/*.stories.*",
+  ]
 }
