--- a/packages/spindle-mcp-server/tsconfig.json
+++ b/packages/spindle-mcp-server/tsconfig.json
@@ -9,5 +9,5 @@
     "declaration": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "src/**/*.test.ts"]
+  "exclude": ["node_modules", "dist"]
 }
