--- a/packages/spindle-ui/tsconfig.esm.json
+++ b/packages/spindle-ui/tsconfig.esm.json
@@ -3,6 +3,11 @@
   "compilerOptions": {
     "target": "ESNext",
     "outDir": "dist",
-    "moduleResolution": "node"
-  }
+    "moduleResolution": "node",
+    "skipLibCheck": true
+  },
+  "exclude": [
+    "src/**/*.test.*",
+    "src/**/*.stories.*"
+  ]
 }
