--- a/packages/spindle-syntax-themes/package.json
+++ b/packages/spindle-syntax-themes/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "test": "yarn lint && yarn test:a11y",
-    "test:a11y": "acot run",
+    "test:a11y": "playwright test",
     "lint": "stylelint *.css",
     "minify": "csso highlightjs-light.css --output highlightjs-light.min.css && csso highlightjs-dark.css --output highlightjs-dark.min.css",
     "prepublishOnly": "yarn minify",
@@ -28,11 +28,10 @@
     "serve": "npx serve -p 5001"
   },
   "devDependencies": {
-    "@acot/acot-config": "0.0.19",
-    "@acot/cli": "0.0.19",
+    "@axe-core/playwright": "^4.10.2",
+    "@playwright/test": "^1.49.0",
     "csso-cli": "4.0.2",
     "firebase-tools": "13.17.0",
-    "puppeteer": "24.2.0",
     "stylelint": "^15.0.0",
     "stylelint-config-standard": "^34.0.0"
   }
