--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "prepare": "is-ci || husky install"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.5.0",
-    "@commitlint/config-conventional": "19.5.0",
-    "@commitlint/config-lerna-scopes": "19.5.0",
+    "@commitlint/cli": "19.8.1",
+    "@commitlint/config-conventional": "19.8.1",
+    "@commitlint/config-lerna-scopes": "19.8.1",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "6.21.0",
     "eslint": "8.57.1",
@@ -34,12 +34,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "9.1.6",
     "is-ci": "4.1.0",
-    "jest": "29.7.0",
+    "jest": "30.0.3",
     "jscodeshift": "17.1.1",
-    "lerna": "8.1.8",
+    "lerna": "8.2.3",
     "npm-run-all2": "6.2.3",
     "prettier": "3.3.3",
-    "textlint": "14.2.0",
+    "textlint": "15.1.0",
     "textlint-rule-preset-ameba": "openameba/textlint-rule-preset-ameba#v0.5.1",
     "typescript": "4.8.2",
     "yaml-lint": "1.7.0"
@@ -55,5 +55,8 @@
       "**/@types/**",
       "**/webpack/**"
     ]
+  },
+  "resolutions": {
+    "form-data": "^4.0.4"
   }
 }
