--- a/packages/spindle-mcp-server/package.json
+++ b/packages/spindle-mcp-server/package.json
@@ -14,10 +14,12 @@
   },
   "private": true,
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.3.1",
+    "@modelcontextprotocol/sdk": "^1.17.4",
+    "express": "^4.18.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "20.17.30",
     "typescript": "5.8.3",
     "vitest": "3.1.2"
