--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,6 @@ jobs:
     permissions:
       contents: write
       id-token: write # Needed for npm Trusted Publishing (OIDC)
-      pull-requests: write
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
@@ -60,6 +59,6 @@ jobs:
           curl
           -X POST
           -H "Accept: application/vnd.github.v3+json"
-          -H "Authorization: token ${{ secrets.PERSONAL_ACCESS_TOKEN }}"
+          -H "Authorization: token ${{ github.token }}"
           https://api.github.com/repos/${{ github.event.repository.owner.name }}/${{ github.event.repository.name }}/pulls
           -d '{"head":"${{ steps.extract_branch.outputs.name }}","base":"${{ github.event.repository.default_branch }}","title":"chore: publish"}'
