chore: update repository URLs to HTTPS format and add directory property
Update all package.json repository URLs from git+https format to https format and add directory property for each package to properly specify monorepo structure.

--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -30,7 +30,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/openameba/spindle.git"
+    "url": "https://github.com/openameba/spindle",
+    "directory": "packages/spindle-hooks"
   },
   "publishConfig": {
     "access": "public"
