--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -15,7 +15,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/openameba/spindle.git"
+    "url": "https://github.com/openameba/spindle",
+    "directory": "packages/spindle-tokens"
   },
   "scripts": {
     "test": "tsc --noEmit && yarn jest",
