--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -44,7 +44,8 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/openameba/spindle.git"
+    "url": "https://github.com/openameba/spindle",
+    "directory": "packages/spindle-ui"
   },
   "publishConfig": {
     "access": "public"
