--- a/packages/spindle-icons/package.json
+++ b/packages/spindle-icons/package.json
@@ -17,7 +17,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/openameba/spindle.git"
+    "url": "https://github.com/openameba/spindle",
+    "directory": "packages/spindle-icons"
   },
   "publishConfig": {
     "access": "public"
