chore(spindle-mcp-server): add copy assets functionality
- Add copy-assets.js script for asset management
- Update package.json with build configuration
- Update .gitignore and yarn.lock

--- a/packages/spindle-mcp-server/package.json
+++ b/packages/spindle-mcp-server/package.json
@@ -2,6 +2,7 @@
   "name": "@openameba/spindle-mcp-server",
   "version": "0.1.0",
   "description": "MCP server for Ameba Design System Spindle",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "20.19.15",
+    "cpx2": "8.0.0",
     "vitest": "3.2.4"
   }
 }
