test(spindle-mcp-server): add copy-assets to test script
- Add npm run copy-assets before vitest run in test script
- Ensures assets are copied before running tests

--- a/packages/spindle-mcp-server/package.json
+++ b/packages/spindle-mcp-server/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "npm run copy-assets && tsc -p tsconfig.build.json",
     "copy-assets": "node scripts/copy-assets.js",
-    "test": "vitest run",
+    "test": "npm run copy-assets && vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "prepublishOnly": "npm run build"
