--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version: 20
+          node-version-file: package.json
           registry-url: 'https://registry.npmjs.org'
       - name: restore lerna
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
