--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "typescript": "4.8.2",
     "yaml-lint": "1.7.0"
   },
+  "engines": {
+    "node": ">=22"
+  },
   "workspaces": {
     "packages": [
       "packages/*"
