chore: update stylelint to v16.24.0
- Update stylelint from v15 to v16.24.0 across all packages
- Update related dependencies:
  - stylelint-config-standard: ^39.0.0
  - stylelint-config-prettier: ^9.0.0
  - stylelint-order: ^7.0.0
  - stylelint-prettier: ^5.0.0
  - stylelint-selector-bem-pattern: ^4.0.0
- Update .stylelintrc.json configurations for stylelint v16 compatibility
- Remove deprecated rules that are no longer available in v16

--- a/packages/spindle-ui/.stylelintrc.json
+++ b/packages/spindle-ui/.stylelintrc.json
@@ -1,5 +1,8 @@
 {
-  "extends": "stylelint-config-prettier",
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-config-prettier"
+  ],
   "plugins": [
     "stylelint-prettier",
     "stylelint-order",
@@ -17,6 +20,9 @@
     },
     "value-keyword-case": ["lower", {
       "ignoreKeywords": ["/^--/"]
-    }]
+    }],
+    "color-function-notation": "legacy",
+    "alpha-value-notation": "number",
+    "color-hex-length": "long"
   }
 }
