--- a/packages/spindle-ui/.stylelintrc.json
+++ b/packages/spindle-ui/.stylelintrc.json
@@ -1,8 +1,5 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-prettier"
-  ],
+  "extends": "stylelint-config-standard",
   "plugins": [
     "stylelint-prettier",
     "stylelint-order",
@@ -23,6 +20,14 @@
     }],
     "color-function-notation": "legacy",
     "alpha-value-notation": "number",
-    "color-hex-length": "long"
+    "selector-class-pattern": null,
+    "custom-property-pattern": null,
+    "keyframes-name-pattern": null,
+    "import-notation": null,
+    "color-function-alias-notation": null,
+    "comment-empty-line-before": null,
+    "media-feature-range-notation": null,
+    "no-descending-specificity": null,
+    "property-no-deprecated": null
   }
 }
