chore: migrate formatter from Prettier to Biome
- Add Biome as the primary formatter for JS/TS/TSX files
- Remove eslint-config-prettier as it's no longer needed
- Keep Prettier for CSS formatting (Stylelint dependency)
- Migrate .prettierignore settings to biome.json
- Update package.json format scripts to use Biome

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lint:yaml": "yamllint .github/workflows/*.yml",
     "lint:packages": "lerna run lint",
     "lint:text": "textlint --quiet .",
-    "format": "prettier --check 'packages/**/src/**/*.{js,ts,tsx}'",
+    "format": "biome format packages/**/src/**/*.{js,ts,tsx}",
     "fix": "run-p fix:*",
     "fix:script": "eslint . --fix",
     "fix:packages": "lerna run format",
-    "fix:format": "prettier --write '**/*.{js,ts,tsx}'",
+    "fix:format": "biome format --write **/*.{js,ts,tsx}",
     "fix:text": "textlint --fix .",
     "bootstrap": "lerna bootstrap",
     "build": "run-s build:*",
@@ -23,13 +23,13 @@
     "prepare": "is-ci || husky install"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.4",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@commitlint/config-lerna-scopes": "19.8.1",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "6.21.0",
     "eslint": "8.57.1",
-    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "9.1.7",
