--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lint:yaml": "yamllint .github/workflows/*.yml",
     "lint:packages": "lerna run lint",
     "lint:text": "textlint --quiet .",
-    "format": "biome format packages/**/src/**/*.{js,ts,tsx}",
+    "format": "biome format",
     "fix": "run-p fix:*",
     "fix:script": "eslint . --fix",
     "fix:packages": "lerna run format",
-    "fix:format": "biome format --write **/*.{js,ts,tsx}",
+    "fix:format": "biome format --write",
     "fix:text": "textlint --fix .",
     "bootstrap": "lerna bootstrap",
     "build": "run-s build:*",
