chore: configure Biome for JS/TS formatting
- Enable Biome formatter for JavaScript and TypeScript files
- Configure formatter to match Prettier settings (single quotes, trailing commas)
- Update npm scripts to support both Biome and Prettier formatting
- Keep ESLint for linting, Biome for formatting only

--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "lint:packages": "lerna run lint",
     "lint:text": "textlint --quiet .",
     "format": "run-p format:*",
-    "format:css": "biome format packages/**/*.css",
-    "format:script": "prettier --check 'packages/**/src/**/*.{js,ts,tsx}'",
+    "format:biome": "biome format .",
+    "format:prettier": "prettier --check 'packages/**/src/**/*.{js,ts,tsx}'",
     "fix": "run-p fix:*",
     "fix:script": "eslint . --fix",
     "fix:packages": "lerna run format",
     "fix:format": "prettier --write '**/*.{js,ts,tsx}'",
-    "fix:css": "biome format --write packages/**/*.css",
+    "fix:biome": "biome format --write .",
     "fix:text": "textlint --fix .",
     "bootstrap": "lerna bootstrap",
     "build": "run-s build:*",
