--- a/biome.json
+++ b/biome.json
@@ -22,7 +22,13 @@
   },
   "javascript": {
     "formatter": {
-      "enabled": false
+      "enabled": true,
+      "indentStyle": "space",
+      "indentWidth": 2,
+      "lineWidth": 80,
+      "quoteStyle": "single",
+      "trailingCommas": "all",
+      "arrowParentheses": "always"
     },
     "linter": {
       "enabled": false
@@ -37,8 +43,8 @@
     }
   },
   "files": {
-    "ignoreUnknown": true,
-    "includes": ["packages/**/*.css"]
+    "ignoreUnknown": false,
+    "includes": ["packages/**/*.{css,js,ts,tsx,jsx}"]
   },
   "linter": {
     "enabled": false
