--- a/packages/spindle-mcp-server/tsconfig.json
+++ b/packages/spindle-mcp-server/tsconfig.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "module": "CommonJS",
-    "target": "ES2020",
-    "lib": ["ES2020"],
+    "module": "nodenext",
+    "target": "ES2022",
+    "lib": ["ES2022"],
     "declaration": true
   },
   "include": ["src/**/*"],
