--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
   "files": {
-    "includes": [
-      "**/*.js",
-      "**/*.jsx",
-      "**/*.ts",
-      "**/*.tsx"
-    ],
+    "includes": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"],
     "ignoreUnknown": true
   },
   "formatter": {
