chore: fix Biome linting errors
- Fix useExhaustiveDependencies by wrapping callbacks in useCallback
- Add biome-ignore comments for intentional rest prop dependencies
- Fix noImplicitAnyLet by adding explicit types
- Configure Biome overrides for test/story/example files to allow static IDs
- Reduced errors from 524 to 419

--- a/biome.json
+++ b/biome.json
@@ -39,5 +39,17 @@
         "recommended": true
       }
     }
-  }
+  },
+  "overrides": [
+    {
+      "includes": ["**/*.stories.*", "**/*.example.*", "**/*.test.*", "**/DialogExample.tsx", "**/Icon/*.tsx"],
+      "linter": {
+        "rules": {
+          "correctness": {
+            "useUniqueElementIds": "off"
+          }
+        }
+      }
+    }
+  ]
 }
