chore: use VCS integration instead of .biomeignore
- Configure Biome to use .gitignore via VCS settings
- Remove .biomeignore as it's deprecated and redundant
- This fixes CI errors where dist files were being processed

--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,10 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true
+  },
   "files": {
     "includes": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"],
     "ignoreUnknown": true
