chore: remove CSS formatting scripts
- Remove format and fix:css scripts as CSS formatting was not originally used
- Remove format from test script as it only checked CSS files

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spindle",
   "private": true,
   "scripts": {
-    "test": "run-p lint format test:*",
+    "test": "run-p lint test:*",
     "test:packages": "lerna run test",
     "test:bin": "jest bin",
     "lint": "run-p lint:*",
@@ -10,11 +10,9 @@
     "lint:yaml": "yamllint .github/workflows/*.yml",
     "lint:packages": "lerna run lint",
     "lint:text": "textlint --quiet .",
-    "format": "prettier --check 'packages/**/src/**/*.css'",
     "fix": "run-p fix:*",
     "fix:script": "biome check --write",
     "fix:packages": "lerna run format",
-    "fix:css": "prettier --write 'packages/**/src/**/*.css'",
     "fix:text": "textlint --fix .",
     "bootstrap": "lerna bootstrap",
     "build": "run-s build:*",
