chore: update TypeScript configuration to ES2022
- Set target and lib to ES2022 with DOM support in root tsconfig
- Remove redundant lib configurations from individual packages
- Enables modern JavaScript features like Object.hasOwn()

--- a/packages/spindle-tokens/tsconfig.json
+++ b/packages/spindle-tokens/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES5",
     "moduleResolution": "Node",
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
   "include": [
     "scripts/**/*.ts",
