chore(spindle-ui): fix Jest type definitions using types configuration
- Add types: ["jest", "@testing-library/jest-dom"] to tsconfig.json
- Properly load jest-dom matchers type definitions
- Fixes toHaveClass and other jest-dom type errors

--- a/packages/spindle-ui/tsconfig.json
+++ b/packages/spindle-ui/tsconfig.json
@@ -2,10 +2,12 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "types": ["jest", "@testing-library/jest-dom"],
     "jsx": "react",
     "skipLibCheck": true
   },
   "include": [
-    "src"
+    "src",
+    "setup-tests.ts"
   ]
 }
