chore(spindle-ui): exclude *.figma.tsx files from build
Exclude Figma metadata files from TypeScript compilation to reduce bundle size

--- a/packages/spindle-ui/tsconfig.cjs.json
+++ b/packages/spindle-ui/tsconfig.cjs.json
@@ -10,6 +10,7 @@
   },
   "exclude": [
     "src/**/*.test.*",
-    "src/**/*.stories.*"
+    "src/**/*.stories.*",
+    "src/**/*.figma.tsx"
   ]
 }
