chore(spindle-ui): fix build output directory structure
- Exclude setup-tests.ts from TypeScript build configs
- Update bundlewatch paths from dist/src/ to dist/
- Maintain compatibility with main branch directory structure

--- a/packages/spindle-ui/tsconfig.esm.json
+++ b/packages/spindle-ui/tsconfig.esm.json
@@ -9,6 +9,7 @@
   "exclude": [
     "src/**/*.test.*",
     "src/**/*.stories.*",
-    "src/**/*.figma.tsx"
+    "src/**/*.figma.tsx",
+    "setup-tests.ts"
   ]
 }
