--- a/packages/spindle-ui/tsconfig.cjs.json
+++ b/packages/spindle-ui/tsconfig.cjs.json
@@ -11,6 +11,7 @@
   "exclude": [
     "src/**/*.test.*",
     "src/**/*.stories.*",
-    "src/**/*.figma.tsx"
+    "src/**/*.figma.tsx",
+    "setup-tests.ts"
   ]
 }
