--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "spindle",
   "private": true,
   "scripts": {
-    "test": "run-p lint format test:*",
+    "test": "run-p lint test:*",
     "test:packages": "lerna run test",
     "test:bin": "jest bin",
     "lint": "run-p lint:*",
-    "lint:script": "eslint --cache 'packages/**/src/**/*.{js,ts,tsx}'",
+    "lint:script": "biome check",
     "lint:yaml": "yamllint .github/workflows/*.yml",
     "lint:packages": "lerna run lint",
     "lint:text": "textlint --quiet .",
-    "format": "prettier --check 'packages/**/src/**/*.{js,ts,tsx}'",
     "fix": "run-p fix:*",
-    "fix:script": "eslint . --fix",
+    "fix:script": "biome check --write",
     "fix:packages": "lerna run format",
-    "fix:format": "prettier --write '**/*.{js,ts,tsx}'",
     "fix:text": "textlint --fix .",
     "bootstrap": "lerna bootstrap",
     "build": "run-s build:*",
@@ -23,15 +21,10 @@
     "prepare": "is-ci || husky install"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.4",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@commitlint/config-lerna-scopes": "19.8.1",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "6.21.0",
-    "eslint": "8.57.1",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "9.1.7",
     "is-ci": "4.1.0",
     "jest": "29.7.0",
