chore: update TypeScript configuration
- Update target to ES2022 for Object.hasOwn() support
- Add DOM libraries to root tsconfig
- Add Jest type definitions to spindle-ui
- Exclude *.figma.tsx files from build in base tsconfig

--- a/packages/spindle-ui/tsconfig.json
+++ b/packages/spindle-ui/tsconfig.json
@@ -7,7 +7,11 @@
     "skipLibCheck": true
   },
   "include": [
-    "src",
-    "setup-tests.ts"
+    "src"
+  ],
+  "exclude": [
+    "src/**/*.test.*",
+    "src/**/*.stories.*",
+    "src/**/*.figma.tsx"
   ]
 }
