chore: optimize TypeScript configurations
- Remove redundant target and lib from root tsconfig.json
- Add lib configuration to package-specific tsconfigs
- Remove unnecessary baseUrl and paths from spindle-hooks
- Unify spindle-mcp-server tsconfig by removing tsconfig.build.json
- Remove empty spindle-ui/tsconfig.test.json
- Fix type check errors across all packages

--- a/packages/spindle-hooks/tsconfig.json
+++ b/packages/spindle-hooks/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "react": ["./node_modules/@types/react"]
-    },
+    "lib": ["ESNext", "DOM"],
     "types": ["jest", "@testing-library/jest-dom"],
     "jsx": "react",
     "skipLibCheck": true
