--- a/packages/spindle-ui/tsconfig.json
+++ b/packages/spindle-ui/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "lib": ["ESNext", "DOM"],
     "types": ["jest", "@testing-library/jest-dom"],
     "jsx": "react",
     "skipLibCheck": true
