--- a/packages/spindle-mcp-server/package.json
+++ b/packages/spindle-mcp-server/package.json
@@ -14,7 +14,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "npm run copy-assets && tsc -p tsconfig.build.json",
+    "build": "npm run copy-assets && tsc",
     "copy-assets": "node scripts/copy-assets.js",
     "test": "npm run copy-assets && vitest run",
     "test:watch": "npm run build && vitest",
