chore: update TypeScript configurations
- Update lib to ESNext in multiple packages
- Remove unnecessary paths configuration in spindle-hooks
- Exclude test files from spindle-mcp-server build
- Remove target ES5 from spindle-tokens
- Update exclude patterns in spindle-ui configs
- Remove tsconfig.build.json from spindle-mcp-server

--- a/packages/spindle-hooks/tsconfig.json
+++ b/packages/spindle-hooks/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "lib": ["DOM", "ES2022"],
-    "baseUrl": ".",
-    "paths": {
-      "react": ["./node_modules/@types/react"]
-    },
+    "lib": ["ESNext", "DOM"],
     "types": ["jest", "@testing-library/jest-dom"],
     "jsx": "react",
     "skipLibCheck": true
