feat(spindle-tokens): add spacing tokens with multi-device support
- Add spacing token generation from Figma API
- Create spacing-transformer to convert Absolute Spacing to px and Relative Spacing to rem
- Generate separate CSS files for mobile/tablet/desktop breakpoints
- Replace config.js with build-tokens.mjs to support multiple Style Dictionary instances
- Add spacing-transformer tests

--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -22,11 +22,12 @@
     "test": "tsc --noEmit && yarn jest",
     "stylelint": "stylelint dist/**/*.css",
     "jest": "jest",
-    "build": "style-dictionary build --verbose",
+    "build": "node build-tokens.mjs",
     "postbuild": "yarn stylelint",
     "export": "run-p export:*",
     "export:animation": "tsx scripts/animation.ts",
     "export:color": "tsx scripts/color.ts",
+    "export:spacing": "tsx scripts/spacing.ts",
     "cp": "npx cpx dist/css/spindle-tokens.css ./",
     "prepublishOnly": "yarn build && yarn cp"
   },
