--- a/.github/workflows/deploy-ui-preview.yml
+++ b/.github/workflows/deploy-ui-preview.yml
@@ -42,8 +42,8 @@ jobs:
           node-version-file: package.json
       - run: yarn install --frozen-lockfile
       - run: |
-          yarn lerna run --scope @openameba/spindle-hooks build
-          yarn lerna run --scope @openameba/spindle-ui storybook:build
+          npx -y lerna@^9 run --scope @openameba/spindle-hooks build
+          npx -y lerna@^9 run --scope @openameba/spindle-ui storybook:build
       - name: deploy to preview channel
         uses: FirebaseExtended/action-hosting-deploy@e2eda2e106cfa35cdbcf4ac9ddaf6c4756df2c8c # v0
         with:
