--- a/.github/workflows/build-tokens.yml
+++ b/.github/workflows/build-tokens.yml
@@ -31,8 +31,8 @@ jobs:
           FIGMA_COLOR_THEME_DARK_FILE_ID: ${{ secrets.FIGMA_COLOR_THEME_DARK_FILE_ID }}
           FIGMA_DROP_SHADOW_FILE_ID: ${{ secrets.FIGMA_DROP_SHADOW_FILE_ID }}
         run: |
-          yarn lerna run --scope @openameba/spindle-tokens export
-          # yarn lerna run --scope @openameba/spindle-tokens build
+          npx -y lerna@^9 run --scope @openameba/spindle-tokens export
+          # npx -y lerna@^9 run --scope @openameba/spindle-tokens build
           yarn fix
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
